chore: Update Astro config with experimental actions support

--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -9,7 +9,7 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
         <h3 class="font-semibold text-2xl text-gray-800">Registro</h3>
         <p class="text-gray-500">Please sign in to your account.</p>
       </div>
-      <div class="space-y-5">
+      <form class="space-y-5">
         <div class="space-y-2">
           <label class="text-sm font-medium text-gray-700 tracking-wide"
             >Nombre</label
@@ -61,12 +61,13 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
         <div>
           <button
             type="submit"
-            class="w-full flex justify-center bg-green-400 hover:bg-green-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
+            id="btn-submit"
+            class="disabled:bg-gray-300 w-full flex justify-center bg-green-400 hover:bg-green-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
           >
-            Sign in
+            Ingresar
           </button>
         </div>
-      </div>
+      </form>
       <div class="pt-5 text-center text-gray-400 text-xs">
         <span>
           Copyright © 2021-{new Date().getFullYear()}
@@ -82,3 +83,25 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
     </div>
   </div>
 </AuthLayout>
+
+<script>
+  import { actions } from 'astro:actions';
+
+  const form = document.querySelector('form') as HTMLFormElement;
+  const btnSubmit = document.querySelector('#btn-submit') as HTMLButtonElement;
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    btnSubmit.setAttribute('disabled', 'disabled');
+
+    const formData = new FormData(form);
+
+    const { data, error } = await actions.registerUser.safe(formData);
+
+    if (error) {
+      console.log(error.message);
+    }
+
+    btnSubmit.removeAttribute('disabled');
+  });
+</script>
