chore: Add Firebase and SweetAlert2 dependencies

--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -94,6 +94,7 @@ const rememberMe = !!email;
 
 <script>
   import { actions } from 'astro:actions';
+  import Swal from 'sweetalert2';
 
   const form = document.querySelector('form') as HTMLFormElement;
   const btnSubmit = document.querySelector('#btn-submit') as HTMLButtonElement;
@@ -107,9 +108,15 @@ const rememberMe = !!email;
     const { data, error } = await actions.registerUser.safe(formData);
 
     if (error) {
-      console.log(error.message);
+      Swal.fire({
+        icon: 'error',
+        title: 'Credenciales no son correctas',
+        text: error.message,
+      });
+      btnSubmit.removeAttribute('disabled');
+      return;
     }
 
-    btnSubmit.removeAttribute('disabled');
+    window.location.replace('/protected');
   });
 </script>
