chore: Add logout functionality to navbar

--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -16,7 +16,7 @@
       <li class="font-semibold text-gray-700">
         <a href="/login">Ingresar</a>
       </li>
-      <li class="font-semibold text-gray-700">
+      <li id="logout" class="font-semibold text-gray-700">
         <a href="#">Salir</a>
       </li>
       <li>
@@ -59,3 +59,14 @@
     </ul>
   </div>
 </nav>
+
+<script>
+  import { actions } from 'astro:actions';
+
+  const logoutElem = document.querySelector('#logout') as HTMLLIElement;
+
+  logoutElem?.addEventListener('click', () => {
+    actions.logout();
+    window.location.href = '/';
+  });
+</script>
