chore: Update login page with remember me functionality and email autofill

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,5 +1,8 @@
 ---
 import AuthLayout from '@/layouts/AuthLayout.astro';
+
+const email = Astro.cookies.get('email')?.value ?? '';
+const rememberMe = !!email;
 ---
 
 <AuthLayout>
@@ -9,7 +12,7 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
         <h3 class="font-semibold text-2xl text-gray-800">Login</h3>
         <p class="text-gray-500">Please sign in to your account.</p>
       </div>
-      <div class="space-y-5">
+      <form class="space-y-5">
         <div class="space-y-2">
           <label class="text-sm font-medium text-gray-700 tracking-wide"
             >Email</label
@@ -17,6 +20,8 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
           <input
             class="w-full text-base px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:border-green-400"
             type="email"
+            name="email"
+            value={email}
             placeholder="mail@gmail.com"
           />
         </div>
@@ -27,6 +32,7 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
           <input
             class="w-full content-center text-base px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:border-green-400"
             type="password"
+            name="password"
             placeholder="Enter your password"
           />
         </div>
@@ -36,6 +42,7 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
               id="remember_me"
               name="remember_me"
               type="checkbox"
+              checked={rememberMe}
               class="h-4 w-4 bg-blue-500 focus:ring-blue-400 border-gray-300 rounded"
             />
             <label for="remember_me" class="ml-2 block text-sm text-gray-800">
@@ -51,12 +58,13 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
         <div>
           <button
             type="submit"
-            class="w-full flex justify-center bg-green-400 hover:bg-green-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
+            id="btn-submit"
+            class="disabled:bg-gray-300 w-full flex justify-center bg-green-400 hover:bg-green-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
           >
-            Sign in
+            Ingresar
           </button>
         </div>
-      </div>
+      </form>
       <div class="pt-5 text-center text-gray-400 text-xs">
         <span>
           Copyright © 2021-{new Date().getFullYear()}
@@ -72,3 +80,32 @@ import AuthLayout from '@/layouts/AuthLayout.astro';
     </div>
   </div>
 </AuthLayout>
+
+<script>
+  import { actions } from 'astro:actions';
+  import Swal from 'sweetalert2';
+
+  const form = document.querySelector('form') as HTMLFormElement;
+  const btnSubmit = document.querySelector('#btn-submit') as HTMLButtonElement;
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    btnSubmit.setAttribute('disabled', 'disabled');
+
+    const formData = new FormData(form);
+
+    const { error } = await actions.loginUser.safe(formData);
+
+    if (error) {
+      Swal.fire({
+        icon: 'error',
+        title: 'Error al ingresar',
+        text: error.message,
+      });
+      btnSubmit.removeAttribute('disabled');
+      return;
+    }
+
+    window.location.replace('/protected');
+  });
+</script>
