feat: Update register action to handle email verification and profile update

--- a/src/pages/protected.astro
+++ b/src/pages/protected.astro
@@ -8,6 +8,7 @@ if (firebaseUser === null) {
   return Astro.redirect('/login');
 }
 
+await firebaseUser?.reload();
 const { displayName, email, emailVerified, photoURL } = firebaseUser;
 
 const name = displayName ?? 'No display Name';
