chore: Add login with Google functionality to the login page

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -63,6 +63,18 @@ const rememberMe = !!email;
           >
             Ingresar
           </button>
+
+          <div class="flex flex-1 w-full my-3">
+            <div class="w-full border-t-2 border-gray-500"></div>
+          </div>
+
+          <button
+            type="button"
+            id="btn-google"
+            class="disabled:bg-gray-300 w-full flex justify-center bg-red-400 hover:bg-red-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
+          >
+            Ingresar con Google
+          </button>
         </div>
       </form>
       <div class="pt-5 text-center text-gray-400 text-xs">
@@ -82,11 +94,14 @@ const rememberMe = !!email;
 </AuthLayout>
 
 <script>
+  import { firebase } from '@/firebase/config';
   import { actions } from 'astro:actions';
+  import { GoogleAuthProvider, signInWithPopup } from 'firebase/auth';
   import Swal from 'sweetalert2';
 
   const form = document.querySelector('form') as HTMLFormElement;
   const btnSubmit = document.querySelector('#btn-submit') as HTMLButtonElement;
+  const bntGoogle = document.querySelector('#btn-google') as HTMLButtonElement;
 
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
@@ -107,5 +122,30 @@ const rememberMe = !!email;
     }
 
     window.location.replace('/protected');
+  });
+
+  bntGoogle.addEventListener('click', async () => {
+    bntGoogle.setAttribute('disabled', 'disabled');
+    const provider = new GoogleAuthProvider();
+
+    try {
+      //! Paso 1: obtener la credenciales del lado del cliente
+      const credentials = await signInWithPopup(firebase.auth, provider);
+
+      // Paso 2: Vericar las credenciales en el backend
+      const { error } = await actions.loginWithGoogle.safe(credentials);
+
+      if (error) {
+        alert(error.message);
+        bntGoogle.removeAttribute('disabled');
+        return;
+      }
+
+      bntGoogle.innerText = 'Redireccionando...';
+      window.location.replace('/protected');
+    } catch (error) {
+      console.log(error);
+      bntGoogle.removeAttribute('disabled');
+    }
   });
 </script>
