chore: Update login page with conditional rendering for protected routes

--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-
+const { isLoggedIn } = Astro.locals;
 ---
 
 <!-- component -->
@@ -10,15 +10,26 @@
       <li class="font-semibold text-gray-700">
         <a href="/">Home</a>
       </li>
-      <li class="font-semibold text-gray-700">
-        <a href="/protected">Protegido</a>
-      </li>
-      <li class="font-semibold text-gray-700">
-        <a href="/login">Ingresar</a>
-      </li>
-      <li id="logout" class="font-semibold text-gray-700">
-        <a href="#">Salir</a>
-      </li>
+      {
+        isLoggedIn && (
+          <li class="font-semibold text-gray-700">
+            <a href="/protected">Protegido</a>
+          </li>
+        )
+      }
+
+      {
+        !isLoggedIn ? (
+          <li class="font-semibold text-gray-700">
+            <a href="/login">Ingresar</a>
+          </li>
+        ) : (
+          <li id="logout" class="font-semibold text-gray-700">
+            <a href="#">Salir</a>
+          </li>
+        )
+      }
+
       <li>
         <svg
           xmlns="http://www.w3.org/2000/svg"
