--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -71,7 +71,7 @@ const rememberMe = !!email;
           <button
             type="button"
             id="btn-google"
-            class="disabled:bg-gray-300 w-full flex justify-center bg-red-400 hover:bg-red-500 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
+            class="disabled:bg-gray-300 w-full flex justify-center bg-red-400 text-gray-100 p-3 rounded-full tracking-wide font-semibold shadow-lg cursor-pointer transition ease-in duration-500"
           >
             Ingresar con Google
           </button>
