chore: Remove unnecessary emailVerified property from user object in protected page

--- a/src/pages/protected.astro
+++ b/src/pages/protected.astro
@@ -8,7 +8,7 @@ if (!isLoggedIn || !user) {
   return Astro.redirect('/login');
 }
 
-const { avatar, email, emailVerified, name } = user;
+const { avatar, email, name } = user;
 
 const firebaseUser = firebase.auth.currentUser;
 
@@ -17,7 +17,8 @@ const firebaseUser = firebase.auth.currentUser;
 // }
 
 await firebaseUser?.reload();
-// const { displayName, email, emailVerified, photoURL } = firebaseUser;
+const { emailVerified } = firebaseUser!;
+// const { displayName, email, emailVerified, photoURL } =  firebaseUser;
 
 // const name = displayName ?? 'No display Name';
 ---
